<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_feed"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/cooksFragment"
        android:icon="@drawable/ic_cooks"
        android:title="@string/nav_cooks" />
    <item
        android:id="@+id/addRecipeFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_add" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_heart_outline"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
